--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
 
     //Preference
     implementation 'androidx.preference:preference:1.1.1'
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
